// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`L6 Framespace/Workbench ModelQueryMethods listSpineInstanceTrees 1`] = `
{
  "#": "SpineInstances",
  "groups": [
    {
      "#": "SpineInstanceGroup",
      "engines": {},
      "exampleDir": "01-Documentation",
      "list": [
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/01-Documentation/0A-CapsuleAnatomy",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/01-Documentation/0A-CapsuleAnatomy:33",
        },
      ],
      "modelName": "L4-space-models/Capsular",
    },
    {
      "#": "SpineInstanceGroup",
      "engines": {},
      "exampleDir": "02-TreeRelationships",
      "list": [
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0A-SingleCapsule",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0A-SingleCapsule:19",
        },
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
        },
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0C-MappedCapsule",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0C-MappedCapsule:23",
        },
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
        },
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0E-Structs",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0E-Structs:22",
        },
        {
          "#": "SpineInstanceTree",
          "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0F-MappedInstanceSharing",
          "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0F-MappedInstanceSharing:36",
        },
      ],
      "modelName": "L4-space-models/Capsular",
    },
  ],
  "list": [
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/01-Documentation/0A-CapsuleAnatomy",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/01-Documentation/0A-CapsuleAnatomy:33",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0A-SingleCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0A-SingleCapsule:19",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0C-MappedCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0C-MappedCapsule:23",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0E-Structs",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0E-Structs:22",
    },
    {
      "#": "SpineInstanceTree",
      "$id": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0F-MappedInstanceSharing",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0F-MappedInstanceSharing:36",
    },
  ],
  "registeredModels": [
    {
      "shortName": "L6-semantic-models/Framespace/Workbench",
      "uri": "@stream44.studio/FramespaceGenesis/L6-semantic-models/Framespace/Workbench/ModelQueryMethods",
    },
  ],
}
`;

exports[`L6 Framespace/Workbench ModelQueryMethods getProcessStats 1`] = `
[
  "#",
  "cpuSystemMs",
  "cpuUserMs",
  "heapTotalMB",
  "heapUsedMB",
  "memoryMB",
  "uptimeSeconds",
]
`;

exports[`L6 Framespace/Workbench ModelQueryMethods getReps 1`] = `
{
  "#": "Reps",
  "list": [],
}
`;

exports[`L6 Framespace/Workbench ModelQueryMethods openFile (missing command) 1`] = `
{
  "#": "Error",
  "message": "No command provided",
  "method": "openFile",
}
`;

exports[`L6 Framespace/Workbench ModelQueryMethods openFile (missing file) 1`] = `
{
  "#": "Error",
  "message": "No file provided",
  "method": "openFile",
}
`;

exports[`L6 Framespace/Workbench ModelQueryMethods openFile (relative path) 1`] = `
{
  "#": "Error",
  "message": "File must be an absolute path: relative/path.ts",
  "method": "openFile",
}
`;

exports[`L6 Framespace/Workbench ModelQueryMethods openFile (non-existent file) 1`] = `
{
  "#": "Error",
  "message": "File not found: /nonexistent/path/file.ts",
  "method": "openFile",
}
`;
